<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

   
    
    <PreferenceCategory android:title="@string/settings_general_setting" >
        <ListPreference
        android:key="prefRoundOff"
        android:title="@string/pref_round_off"
        android:dialogTitle="@string/pref_round_off_box_title"
        android:entries="@array/pref_round_off_entries"
        android:entryValues="@array/pref_round_off_values"
        android:defaultValue="@string/pref_round_off_default" />
        
        <Preference 
        	android:key="prefClearHistory"
         	android:title="@string/pref_clear_history"
         
         />

    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_about" >
       
        
         <Preference 
            	android:title="@string/pref_contact_dev" 
            	android:summary="@string/pref_contact_dev_sum" 
            	android:key="prefContactDev"/>
    </PreferenceCategory>
    
    
   

</PreferenceScreen>